# sdc-wasm

./: Cargo.toml  prepare-build.sh  start-build.sh
js/: index.html  wasmLoader.js
js/css/: base.css  reset.css  style.css
src/: game.rs  lib.rs
src/ai/: network.rs
src/utils/: geo.rs  helpers.rs  js.rs  mod.rs  sprite.rs
src/visual/: canvas.rs  drawable.rs  mod.rs
src/world/: car.rs  entities.rs  finish.rs  mod.rs  player.rs  road.rs  sensors.rs
