[package]
name = "sdc-wasm"
version = "0.1.0"
authors = ["Filip Kocis <filip@filip.llc>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',

  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'DomRect',
  "CssStyleDeclaration",

  'MouseEvent',
  'EventListener',
]


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
